--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -14,15 +14,15 @@
             crossorigin="anonymous">
     </script>
     <script>
-    $(document).ready(function(){
-        $('a[data-toggle="tab"]').on('show.bs.tab', function(e) {
-            localStorage.setItem('activeTab', $(e.target).attr('href'));
+        $(document).ready(function(){
+            $('a[data-toggle="tab"]').on('show.bs.tab', function(e) {
+                localStorage.setItem('activeTab', $(e.target).attr('href'));
+            });
+            var activeTab = localStorage.getItem('activeTab');
+            if(activeTab){
+                $('#nav-tab a[href="' + activeTab + '"]').tab('show');
+            }
         });
-        var activeTab = localStorage.getItem('activeTab');
-        if(activeTab){
-            $('#nav-tab a[href="' + activeTab + '"]').tab('show');
-        }
-    });
     </script>
 </head>
 <body class="p-3 mb-2 bg-light text-black">
@@ -87,7 +87,6 @@
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                     + Add a New Note
                 </button>
-
                 <div class="table-responsive">
                     <table class="table table-striped" id="userTable">
                         <thead>
@@ -158,23 +157,34 @@
                 <div class="table-responsive">
                     <table class="table table-striped" th:object="${credentials}" id="credentialTable">
                         <thead>
-                        <tr>
-                            <th style="width: 20%" scope="col"></th>
-                            <th style="width: 35%" scope="col">URL</th>
-                            <th style="width: 20%" scope="col">Username</th>
-                            <th style="width: 25%" scope="col">Password</th>
-                        </tr>
+                            <tr>
+                                <th style="width: 20%" scope="col"></th>
+                                <th style="width: 35%" scope="col">URL</th>
+                                <th style="width: 20%" scope="col">Username</th>
+                                <th style="width: 25%" scope="col">Password</th>
+                            </tr>
                         </thead>
+<!--                        <tbody>-->
+<!--                            <tr>-->
+<!--                                <td>-->
+<!--                                    <button type="button" class="btn btn-success">Edit</button>-->
+<!--                                    <a class="btn btn-danger">Delete</a>-->
+<!--                                </td>-->
+<!--                                <th scope="row">Example Credential URL</th>-->
+<!--                                <td>Example Credential Username</td>-->
+<!--                                <td>Example Credential Password</td>-->
+<!--                            </tr>-->
+<!--                        </tbody>-->
                         <tbody>
-                        <tr>
-                            <td>
-                                <button type="button" class="btn btn-success">Edit</button>
-                                <a class="btn btn-danger">Delete</a>
-                            </td>
-                            <th scope="row">Example Credential URL</th>
-                            <td>Example Credential Username</td>
-                            <td>Example Credential Password</td>
-                        </tr>
+                            <tr th:each="credential:${credentials}">
+                                <td>
+                                    <button type="button" class="btn btn-success">Edit</button>
+                                    <a class="btn btn-danger">Delete</a>
+                                </td>
+                                <th scope="row" th:text="${credential.url}">Example Credential URL</th>
+                                <td th:text="${credential.username}">Example Credential Username</td>
+                                <td th:text="${credential.password}">Example Credential Password</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -189,7 +199,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form action="#" method="POST">
+                                <form th:action="@{/credential-upload}" method="POST">
                                     <input type="hidden" name="credentialId" id="credential-id">
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">URL</label>
