credential delete / update working

--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -164,22 +164,17 @@
                                 <th style="width: 25%" scope="col">Password</th>
                             </tr>
                         </thead>
-<!--                        <tbody>-->
-<!--                            <tr>-->
-<!--                                <td>-->
-<!--                                    <button type="button" class="btn btn-success">Edit</button>-->
-<!--                                    <a class="btn btn-danger">Delete</a>-->
-<!--                                </td>-->
-<!--                                <th scope="row">Example Credential URL</th>-->
-<!--                                <td>Example Credential Username</td>-->
-<!--                                <td>Example Credential Password</td>-->
-<!--                            </tr>-->
-<!--                        </tbody>-->
                         <tbody>
                             <tr th:each="credential:${credentials}">
                                 <td>
-                                    <button type="button" class="btn btn-success">Edit</button>
-                                    <a class="btn btn-danger">Delete</a>
+                                    <button type="button" class="btn btn-success"
+                                            th:onclick="javascript:showCredentialModal([[${credential.credentialId}]],[[${credential.url}]],[[${credential.username}]], [[${credential.password}]])">
+                                        Edit
+                                    </button>
+                                    <a class="btn btn-danger"
+                                       th:href="@{/credential-delete/{credentialId}(credentialId=${credential.credentialId})}">
+                                        Delete
+                                    </a>
                                 </td>
                                 <th scope="row" th:text="${credential.url}">Example Credential URL</th>
                                 <td th:text="${credential.username}">Example Credential Username</td>
