--- a/starter/cloudstorage/src/main/resources/templates/signup.html
+++ b/starter/cloudstorage/src/main/resources/templates/signup.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
-
     <title>Sign Up</title>
 </head>
 <body class="p-3 mb-2 bg-light text-black">
@@ -25,21 +23,25 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputFirstName">First Name</label>
-                <input type="input" name="firstName" class="form-control" id="inputFirstName" placeholder="Enter First Name" maxlength="20" required>
+                <input type="input" name="firstName" class="form-control" id="inputFirstName"
+                       placeholder="Enter First Name" maxlength="20" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="inputLastName">Last Name</label>
-                <input type="input" name="lastName" class="form-control" id="inputLastName" placeholder="Enter Last Name" maxlength="20" required>
+                <input type="input" name="lastName" class="form-control" id="inputLastName"
+                       placeholder="Enter Last Name" maxlength="20" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputUsername">Username</label>
-                <input type="input" name="username" class="form-control" id="inputUsername" placeholder="Enter Username" maxlength="20" required>
+                <input type="input" name="username" class="form-control" id="inputUsername"
+                       placeholder="Enter Username" maxlength="20" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword">Password</label>
-                <input type="password" name="password" class="form-control" id="inputPassword" placeholder="Enter Password" maxlength="20" required>
+                <input type="password" name="password" class="form-control" id="inputPassword"
+                       placeholder="Enter Password" maxlength="20" required>
             </div>
         </div>
         <button id="submit-button" type="submit" class="btn btn-primary">Sign Up</button>
