--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -169,12 +169,12 @@
                         <tbody>
                             <tr th:each="credential:${credentials}">
                                 <td>
-                                    <button type="button" class="btn btn-success"
+                                    <a type="button" class="btn btn-success"
                                         th:onclick="javascript:showCredentialModal([[${credential.credentialId}]],[[${credential.url}]],[[${credential.username}]],[[${credential.password}]])">
+<!--                                        th:href="@{/credential-update/{credentialId}(credentialId=${credential.credentialId})}">-->
                                         Edit
-                                    </button>
-                                    <a class="btn btn-danger"
-                                       th:href="@{/credential-delete/{credentialId}(credentialId=${credential.credentialId})}">
+                                    </a>
+                                    <a class="btn btn-danger" th:href="@{/credential-delete/{credentialId}(credentialId=${credential.credentialId})}">
                                         Delete
                                     </a>
                                 </td>
