--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
-
     <title>Home</title>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
@@ -149,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>`
             <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
                 <button id="new-credential" style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showCredentialModal()">
@@ -170,7 +168,9 @@
                             <tr th:each="credential:${credentials}">
                                 <td>
                                     <a type="button" class="btn btn-success"
-                                        th:onclick="javascript:showCredentialModal([[${credential.credentialId}]],[[${credential.url}]],[[${credential.username}]],[[${credential.password}]])">
+                                        th:onclick="javascript:showCredentialModal([[${credential.credentialId}]],[[${credential.url}]],
+                                                                                   [[${credential.username}]],
+                                                                                   [[${credential.decryptPassword(credential.password, credential.encryptionService, credential.encodedKey)}]])">
 <!--                                        th:href="@{/credential-update/{credentialId}(credentialId=${credential.credentialId})}">-->
                                         Edit
                                     </a>
