--- a/starter/cloudstorage/src/main/resources/templates/home.html
+++ b/starter/cloudstorage/src/main/resources/templates/home.html
@@ -26,6 +26,7 @@
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container">
     <div id="logoutDiv">
+
         <form th:action="@{/logout}" method="POST">
             <button type="submit" class="btn btn-secondary float-right"
                     onclick="localStorage.setItem('activeTab', 'nav-files');">
@@ -33,6 +34,7 @@
             </button>
         </form>
     </div>
+
     <div id="contentDiv" style="clear: right;">
         <nav style="clear: right;">
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -43,6 +45,9 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
+                <div id="file-success-msg" th:if="${fileUploadSuccess}" th:text="${fileUploadSuccess}" class="alert alert-success" role="alert"/>
+                <div id="file-delete-msg" th:if="${fileDeleteSuccess}" th:text="${fileDeleteSuccess}" class="alert alert-success" role="alert"/>
+                <div id="file-error-msg" th:if="${fileError}" th:text="${fileError}" class="alert alert-danger" role="alert"/>
                 <form th:action="@{/file-upload}" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
@@ -83,6 +88,10 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
+                <div id="note-success-msg" th:if="${noteUploadSuccess}" th:text="${noteUploadSuccess}" class="alert alert-success" role="alert"/>
+                <div id="note-delete-msg" th:if="${noteDeleteSuccess}" th:text="${noteDeleteSuccess}" class="alert alert-success" role="alert"/>
+                <div id="note-edit-msg" th:if="${noteEditSuccess}" th:text="${noteEditSuccess}" class="alert alert-success" role="alert"/>
+                <div id="note-error-msg" th:if="${noteError}" th:text="${noteError}" class="alert alert-danger" role="alert"/>
                 <button id="new-note" style="margin: 0.25em;" type="button" class="btn btn-info float-right" onclick="showNoteModal()">
                     + Add a New Note
                 </button>
@@ -122,8 +131,10 @@
                                     <span aria-hidden="true"></span>
                                 </button>
                             </div>
+
                             <div class="modal-body">
                                 <form th:action="@{/note-upload}" method="POST">
+
                                     <input type="hidden" name="noteId" id="note-id">
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Title</label>
@@ -149,6 +160,10 @@
                 </div>
             </div>`
             <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
+                <div id="credential-success-msg" th:if="${credentialUploadSuccess}" th:text="${credentialUploadSuccess}" class="alert alert-success" role="alert"/>
+                <div id="credential-delete-msg" th:if="${credentialDeleteSuccess}" th:text="${credentialDeleteSuccess}" class="alert alert-success" role="alert"/>
+                <div id="credential-edit-msg" th:if="${credentialEditSuccess}" th:text="${credentialEditSuccess}" class="alert alert-success" role="alert"/>
+                <div id="credential-error-msg" th:if="${credentialError}" th:text="${credentialError}" class="alert alert-danger" role="alert"/>
                 <button id="new-credential" style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showCredentialModal()">
                     + Add a New Credential
